--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,8 +15,8 @@ body.has-fixed-header {
 }
 
 main {
-  padding-top: 40px !important;
-  padding-bottom: 100px !important;
+  padding-top: 50px !important;
+  padding-bottom: 150px !important;
 }
 
 /* ══ NAVIGATION HEADER ══ */
